--- a/output/ux.html
+++ b/output/ux.html
@@ -11,7 +11,6 @@
 </style>
     <link rel="stylesheet" href="inter-ui.min.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
-    
     <script src="bundle.js" defer></script>
     <noscript>
         <link rel="stylesheet" href="style.min.css">
@@ -40,6 +39,8 @@
 <p>I nedanstående artikel introducerar Nathan Kontny konceptet LUFO och hur han skapade ett jQuery plugin för detta.</p>
 <p><a href="https://m.signalvnoise.com/lufo--last-used-first-out---an-easy-way-to-drastically-improve-the-user-experience-of-long-select/">Lufo, Last Used First Out</a></p>
 </section><section id="titta"><h2><a href="#titta">Titta</a></h2>
+<p>Ofta fokuserar vi inom webbutvecklingen på det allra senaste inom en given teknologi. Det viktiga att lära sig är dock i långt större grad vad som inte ändrar, vilka tekniker, metoder och verktyg är det som består och som även om 20 år kommer användas. I nedanstående keynote pratar UX gurun Jakob Nielsen från Nielsen Norman Group om de bestående tekniker inom User Experience.</p>
+<div class='embed-container'><iframe width="560" height="315" src="https://www.youtube.com/embed/OtBeg5eyEHU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 </section><section id="kravspecifikation"><h2><a href="#kravspecifikation">Kravspecifikation</a></h2>
 </section><section id="skriva"><h2><a href="#skriva">Skriva</a></h2>
 <p>Vi fortsätter iterativt med att förbättra vårt akademiska skrivande. Använd den återkopplingen du fick på första veckans text och förbättra din introduktion.</p>
