--- a/output/project.html
+++ b/output/project.html
@@ -7,9 +7,11 @@
     <meta name="keywords" content="JavaScript,javascript,ramverk,framework,frontend,backend,BTH,webbprogrammering">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>jsramverk.me - Projekt</title>
-    <style>*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth;font-size:100%}body{font-family:sans-serif;font-display:auto;line-height:1.4}.header{width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0 rgba(0,0,0,.2);z-index:1000}.header h1{margin-bottom:0}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:2rem;padding:1.4rem 1rem;overflow:auto}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}.toc{display:none}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}.main-title{font-size:3rem;margin-bottom:1.4rem}}@media(min-width: 992px){.container,.inner-footer{width:960px}.week-container{width:100%;margin-bottom:16rem}.week{width:auto;margin-left:350px}.main-title{font-size:4rem;margin-bottom:1.68rem}h1{font-size:3.6rem;margin-bottom:1.68rem}h2{font-size:2.88rem;margin-bottom:1.68rem}h3{font-size:2.4rem;margin-bottom:1.68rem}h4{font-size:2.04rem;margin-bottom:1.68rem}p{font-size:1.2rem;margin-bottom:1.68rem}blockquote{margin-bottom:1.68rem}blockquote p{font-size:1.44rem;margin-bottom:0}.toc{width:310px;display:block;text-align:right;position:fixed;top:14.5rem}.toc ul{list-style-type:none;font-size:1.4rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
+    <style>*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth;font-size:100%;font-family:sans-serif}body{font-display:auto;line-height:1.4}.header{width:100%;padding:1.4rem 1rem;background:linear-gradient(45deg, #f0db4f, #f4e57e);box-shadow:2px 2px 5px 0 rgba(0,0,0,.2);z-index:1000}.header h1{margin-bottom:0}.header a{color:#323330;text-decoration:none}.header a:hover{text-decoration:underline}.container,.inner-footer{width:100%;margin-top:2rem;padding:1.4rem 1rem;overflow:auto}::selection,::-moz-selection{background:#f0db4f}.main-title{font-size:2.4rem;margin-bottom:1.4rem}.toc{display:none}@media(min-width: 768px){.container,.inner-footer{width:740px;margin-left:auto;margin-right:auto}.main-title{font-size:3rem;margin-bottom:1.4rem}}@media(min-width: 992px){.container,.inner-footer{width:960px}.week-container{width:100%;margin-bottom:16rem}.week{width:auto;margin-left:350px}.main-title{font-size:4rem;margin-bottom:1.68rem}h1{font-size:3.6rem;margin-bottom:1.68rem}h2{font-size:2.88rem;margin-bottom:1.68rem}h3{font-size:2.4rem;margin-bottom:1.68rem}h4{font-size:2.04rem;margin-bottom:1.68rem}p{font-size:1.2rem;margin-bottom:1.68rem}blockquote{margin-bottom:1.68rem}blockquote p{font-size:1.44rem;margin-bottom:0}.toc{width:310px;display:block;text-align:right;position:fixed;top:14.5rem}.toc ul{list-style-type:none;font-size:1.4rem}}@media(min-width: 1200px){.container,.inner-footer{width:1160px}}/*# sourceMappingURL=inline.min.css.map */
 </style>
-    <link rel="stylesheet" href="inter-ui.min.css" media="none" onload="if(media!='all')media='all'">
+    <link rel="preload" href="Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="Inter-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="Inter-Italic.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
     <script src="bundle.js" defer></script>
     <noscript>
@@ -23,10 +25,11 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f0db4f">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <header class="header">
-        <h1><a href="/">jsramverk.me</a></h1>
+        <h1><a href="/" aria-label="jsramverk.me">jsramverk.me</a></h1>
     </header>
 
     <main class="container">
@@ -81,9 +84,9 @@
 
     <footer class="footer" id="footer">
         <div class="inner-footer">
-            <p>&copy; <a href="https://emilfolino.se" target="_blank">Emil Folino</a></p>
+            <p>&copy; <a href="https://emilfolino.se" target="_blank" rel="noopener">Emil Folino</a></p>
             <p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
-            <p>The source code can be found at <a href="https://github.com/emilfolino/jsramverk.me">GitHub emilfolino/jsramverk.me</a></p>
+            <p>The source code can be found at <a href="https://github.com/emilfolino/jsramverk.me" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.me</a></p>
         </div>
     </footer>
 </body>
